--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 <body class="theme-default">
     <div class="container">
         <header>
-            <div class="logo">我的主页</div>
+            <div class="logo">打开新的标签页</div>
             <div class="settings">
                 <button class="settings-btn" id="settingsBtn">⚙️</button>
                 <div class="settings-menu" id="settingsMenu">
