--- a/index.html
+++ b/index.html
@@ -406,10 +406,10 @@
                 <div class="link-card" data-url="https://www.jd.com">
                     <div class="link-icon">京</div>
                     <div class="link-name">京东</div>
-                </div>
-                <div class="link-card" data-url="https://www.zhihu.com">
-                    <div class="link-icon">知</div>
-                    <div class="link-name">知乎</div>
+                </div>，
+                <div class="link-card" data-url="https://github.com/liergo-boop/lrgmc-newtab.github.io">
+                    <div class="link-icon">开</div>
+                    <div class="link-name">此项目已开源，点击查看开源地址</div>
                 </div>
             </div>
         </div>
