--- a/index.html
+++ b/index.html
@@ -485,9 +485,9 @@
                     <div class="link-icon">京</div>
                     <div class="link-name">京东</div>
                 </div>
-                <div class="link-card" data-url="https://www.zhihu.com">
+                <div class="link-card" data-url="https://github.com/liergo-boop/lrgmc-newtab.github.io">
                     <div class="link-icon">知</div>
-                    <div class="link-name">知乎</div>
+                    <div class="link-name">项目开源地址</div>
                 </div>
             `;
             
