--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                     <div class="link-name">京东</div>
                 </div>
                 <div class="link-card" data-url="https://github.com/liergo-boop/lrgmc-newtab.github.io">
-                    <div class="link-icon">知</div>
+                    <div class="link-icon">项</div>
                     <div class="link-name">项目开源地址</div>
                 </div>
             `;
